yiltc-v0.2-backup/testsuite/negative/assert_in_non_fn.yilt
// assert at top level (outside any function) should fail
assert true
